--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="./imagens/logo.svg" alt="">
+        <img src="./imagens/logo.svg" alt="logo">
     </header>
 
     <main>
