--- a/index.html
+++ b/index.html
@@ -12,39 +12,44 @@
 </head>
 
 <body>
-    <header>
-        <img src="./imagens/logo.svg" alt="logo">
-    </header>
+    <div class="conteudo">
+        <header>
+            <img src="./imagens/logo.svg" alt="logo">
+        </header>
 
-    <main>
-        <section class="descricao">
-            <h1>Acesse a plataforma</h1>
+        <main>
+            <section class="descricao">
+                <h1>Acesse a plataforma</h1>
 
-            <p>Faça login ou registre-se para começar a construir seus projetos ainda hoje.</p>
-        </section>
+                <p>Faça login ou registre-se para começar a construir seus projetos ainda hoje.</p>
+            </section>
 
-        <section class="login">
-            <form action="">
-                <div class="input-box">
-                    <label for="email">E-mail</label>
-                    <input type="email" placeholder="Digite seu e-mail" id="email">
-                </div>
-                <div class="input-box">
-                    <div>
-                        <label for="senha">Senha</label>
-                        <a href="">Esqueceu a senha?</a>
+            <section class="login">
+                <form action="">
+                    <div class="input-box">
+                        <label for="email">E-mail</label>
+                        <input type="email" placeholder="Digite seu e-mail" id="email">
                     </div>
-                    <input type="password" placeholder="Digite sua senha" id="senha">
-                </div>
+                    <div class="input-box">
+                        <div>
+                            <label for="senha">Senha</label>
+                            <a href="">Esqueceu a senha?</a>
+                        </div>
+                        <input type="password" placeholder="Digite sua senha" id="senha">
+                    </div>
 
-                <button>Entrar</button>
-            </form>
+                    <button>Entrar</button>
+                </form>
 
-            <p>
-                Ainda não tem uma conta? <a href="">Inscreva-se</a>
-            </p>
-        </section>
-    </main>
+                <p>
+                    Ainda não tem uma conta? <a href="">Inscreva-se</a>
+                </p>
+            </section>
+        </main>
+    </div>
+    <div class="bg-desktop">
+        <img src="./imagens/bg-desktop.png" alt="background desktop">
+    </div>
 </body>
 
 </html>
